--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    
     <!-- --bootstrap-- -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
     <!-- --style css--- -->
     <link rel="stylesheet" href="assets/css/style.css" />
-
   </head>
   <body>
     <header>
@@ -79,10 +78,10 @@
             <div class="left-sidebar">
                 <ul class="left-sidelist">
                     <li><a href="#">信息中心</a></li>
-                    <li><a href="#" class="active no-space" >Go eLearning</a></li>
+                    <li><a href="index.html" class="active no-space" >Go eLearning</a></li>
                     <li><a href="#">報價紀錄</a></li>
                     <li><a href="#">活動報名紀錄</a></li>
-                    <li><a href="#">個人資料</a></li>
+                    <li><a href="profile_edit.html">個人資料</a></li>
                 </ul>
             </div>
             <div class="right-sidebar">
@@ -90,7 +89,7 @@
                   <h2>Go eLearning</h2>
                 </div>
                 <div class="d-flex justify-content-center justify-content-sm-end yellow-btn">
-                  <button class="btn"><span>連接到</span> Go eLearning</button>
+                  <a href="#" class="btn"><span>連接到</span> Go eLearning</a>
                 </div>
                 <div class="content">
                   <h4>
