dashboardcast page name change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="main-data_flex">
             <div class="left-sidebar">
                 <ul class="left-sidelist">
-                    <li><a href="dashboard_message.html">信息中心</a></li>
+                    <li><a href="broadcast_message.html">信息中心</a></li>
                     <li><a href="index.html" class="active no-space" >Go eLearning</a></li>
                     <li><a href="#">報價紀錄</a></li>
                     <li><a href="#">活動報名紀錄</a></li>
