message leftsidebar height

--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -75,7 +75,7 @@
       <section class="main_data">
         <div class="container-fluid p-0">
           <div class="main-data_flex">
-            <div class="left-sidebar">
+            <div class="left-sidebar msg_leftside">
                 <ul class="left-sidelist">
                     <li><a href="broadcast_message.html"  class="active">信息中心</a></li>
                     <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
