dashboard_message detail page

--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -106,7 +106,7 @@
                                   </div>
                                 </div>
                                 <div class="msg-btn">
-                                 <a href="#"><button class="btn">詳情</button></a>
+                                 <a href="dashboardcast_message_page.html"><button class="btn">詳情</button></a>
                                 </div>
                             </div>
                         </div>
