--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -79,7 +79,7 @@
                 <ul class="left-sidelist">
                     <li><a href="broadcast_message.html"  class="active">信息中心</a></li>
                     <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
-                    <li><a href="#">報價紀錄</a></li>
+                    <li><a href="quotation.html">報價紀錄</a></li>
                     <li><a href="#">活動報名紀錄</a></li>
                     <li><a href="profile_edit.html">個人資料</a></li>
                 </ul>
