--- a/broadcast_message_detail.html
+++ b/broadcast_message_detail.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <title>Sass</title>
     <!-- --fonts-- -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +27,8 @@
     <!-- --style css--- -->
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body> <header>
+<body> 
+  <header>
     <div class="container">
       <div class="header-data">
         <h3>教城主頁</h3>
