go learnigpage mobile screen

--- a/quotation.html
+++ b/quotation.html
@@ -93,11 +93,11 @@
                   </form>
                 </div>
                 <div class="quotation-tab">
-                  <div class="orange-tab">進行中</div>
-                  <div class="gray-tab">已結束</div>
+               <a href="#"><div class="orange-tab">進行中</div></a>   
+                 <a href="#"><div class="gray-tab">已結束</div></a> 
                 </div>
                 <div class="quotation-table table-responsive">
-                   <table class="table-striped table">
+                   <table class="table-striped table searchable sortable ">
                     <thead>
                         <tr>
                             <th>報價日期</th>
@@ -250,5 +250,6 @@
     
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 </body>
 </html>
