go learnign responsive changes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
       </div>
     </header>
+
     <!-- --main-- -->
     <section class="main">
       <div class="container">
@@ -146,8 +147,8 @@
                     </div>
                     <div class="col-12 col-sm-9 order-2 order-sm-1 justify-content-sm-end d-flex">
                       <div class="hours-div ">
-                        <h2>我的觀看時數：</h2>
-                        <h2>4小時5分鐘</h2>
+                       <div class="d-flex gap-2"> <h2>我的觀看時數：</h2>
+                        <h2>4小時5分鐘</h2></div>
                         <button class="btn">列印紀錄</button>
                      </div>
                     </div>
