--- a/index.html
+++ b/index.html
@@ -117,14 +117,15 @@
                     <li><a href="profile_edit.html">個人資料</a></li>
                 </ul>
             </div>
-            <div class="right-sidebar">
-                <div class="rightside-title">
+            <div class="right-sidebar ">
+                <div class="rightside-title container">
                   <h2>Go eLearning</h2>
                 </div>
-                <div class="d-flex justify-content-center justify-content-sm-end yellow-btn">
+                <div class="d-flex justify-content-center justify-content-sm-end yellow-btn container">
                   <a href="#" class="btn"><span>連接到</span> Go eLearning</a>
                 </div>
                 <div class="content">
+                 <div class="container">
                   <h4>
                     教師從Go eLearning的「我的CPD」系統已觀看的影片數目和總時數記錄
                   </h4>
@@ -139,20 +140,20 @@
                       <h3>4小時5分鐘</h3>
                     </div>
                   </div>
-                  <div class="row table-nav align-items-center">
-                    <div class="col-12 col-sm-3 order-0">
+                  <div class="row table-nav align-items-center ps-3 pe-3">
+                    <div class="col-12 col-sm-3 order-0 p-0">
                       <div class="watch-history">
                         <h3 class="watch-history-h3">觀看紀錄</h3>
                      </div>
                     </div>
-                    <div class="col-12 col-sm-9 order-2 order-sm-1 justify-content-sm-end d-flex">
+                    <div class="col-12 col-sm-9 order-2 order-sm-1 justify-content-sm-end d-flex p-0">
                       <div class="hours-div ">
                        <div class="d-flex gap-2"> <h2>我的觀看時數：</h2>
                         <h2>4小時5分鐘</h2></div>
                         <button class="btn">列印紀錄</button>
                      </div>
                     </div>
-                    <div class="col-12 order-1 order-sm-2">
+                    <div class="col-12 order-1 order-sm-2 p-">
                       <div class="date-range">
                         <h3>日期範圍 </h3>
                         <form class="d-flex gap-1 align-items-center">
@@ -165,7 +166,8 @@
                       </form>
                     </div>
                     </div>
-                  </div>                
+                  </div>  
+                 </div>              
                <div class="grid-table">
                    <div class="table-head bg-green">
                     <div class="d-flex head-w">
@@ -265,6 +267,7 @@
                    </div>
                 
                </div>
+               <div class="height-2 d-none d-lg-block"></div>
                 </div>
               </div>
            
