--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <button class="btn">列印紀錄</button>
                      </div>
                     </div>
-                    <div class="col-12 order-1 order-sm-2 p-">
+                    <div class="col-12 order-1 order-sm-2 p-0">
                       <div class="date-range">
                         <h3>日期範圍 </h3>
                         <form class="d-flex gap-1 align-items-center">
