--- a/profile_edit.html
+++ b/profile_edit.html
@@ -117,7 +117,7 @@
                     <li><a href="profile_edit.html" class="active">個人資料</a></li>
                 </ul>
             </div>
-            <div class="right-sidebar">
+            <div class="right-sidebar mobile-screen-right">
                 <div class="rightside-title">
                   <h2 class="title_space">個人資料</h2>
                 </div>
@@ -125,42 +125,50 @@
               <h3 class="account-h3">帳戶資料</h3>
               <ul class="login-data">
                 <li>
-                    <div>
+                    <div class="login-detail">
                         <h4>登入名稱</h4>
-                        <h4>帳戶類別</h4>
-                    </div>
-                    <div>
                         <h4>gzo089966</h4>
+                    </div>
+                    <div class="login-detail">
+                      <h4>帳戶類別</h4>
                         <h4>公眾帳戶</h4>
-                        
                     </div>
                 </li>
               </ul>
                <h3 class="account-h3">個人信息</h3>
                <ul  class="login-data">
                 <li>
-                    <div >
-                        <h4 class="latter_space">稱謂</h4>
-                        <h4 class="latter_space">中文姓氏</h4>
-                        <h4 class="latter_space">英文姓氏</h4>
-                        <h4 class="latter_space">別名</h4>
-                        <h4 class="latter_space">聯絡電郵</h4>
-                        <h4 class="latter_space">聯絡電話</h4>
-                    </div>
-                    <div>
-                        <h4>先生</h4>
-                        <h4>朱</h4>
-                        <h4>Chu</h4>
-                        <h4>Jay</h4>
-                        <h4>jay@venture-solutions.com</h4>
-                        <h4>＋852 93320754</h4>
-                    </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">稱謂</h4>
+                    <h4>先生</h4>
+                  </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">中文姓氏</h4>
+                    <h4>朱</h4>
+                  </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">英文姓氏</h4>
+                    <h4>Chu</h4>
+                  </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">別名</h4>
+                    <h4>Jay</h4>
+                  </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">聯絡電郵</h4>
+                    <h4>jay@venture-solutions.com</h4>
+                  </div>
+                  <div class="login-detail">
+                    <h4 class="latter_space">聯絡電話</h4>
+                    <h4>＋852 93320754</h4>
+                  </div>
+                   
                 </li>
                </ul>
               <h3 class="account-h3">訂閱教城資訊</h3>
               <ul class="login-data mb-35">
                 <li>
-                    <h4 class="latter_space">已選擇接收的電子報及活動資訊</h4>
+                    <h4 class="latter_space custm-mb">已選擇接收的電子報及活動資訊</h4>
                    <ul class="dot-style">
                     <li>教城電子報</li>
                     <li>教師資訊</li>
