quotation-tab page

--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -121,7 +121,7 @@
                 <div class="rightside-title">
                   <h2 class="title_space">信息中心</h2>
                 </div>
-                <div class="message-data p-0 ps-sm-3 pe-sm-3 p-lg-0">
+                <div class="message-data p-lg-0">
                     <div class="grid">
                         <div class="">
                             <div class="message-content d-flex flex-column justify-content-between ">
