--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                 </ul>
             </div>
             <div class="right-sidebar ">
-                <div class="rightside-title container">
+                <div class="rightside-title">
                   <h2>Go eLearning</h2>
                 </div>
                 <div class="d-flex justify-content-center justify-content-sm-end yellow-btn container">
                   <a href="#" class="btn"><span>連接到</span> Go eLearning</a>
                 </div>
                 <div class="content">
-                 <div class="container">
+                 <div class="">
                   <h4>
                     教師從Go eLearning的「我的CPD」系統已觀看的影片數目和總時數記錄
                   </h4>
