--- a/quotation.html
+++ b/quotation.html
@@ -96,7 +96,7 @@
                <a href="#"><div class="orange-tab">進行中</div></a>   
                  <a href="#"><div class="gray-tab">已結束</div></a> 
                 </div>
-                <div class="quotation-table table-responsive">
+                <!-- <div class="quotation-table table-responsive">
                    <table class="table-striped table searchable sortable ">
                     <thead>
                         <tr>
@@ -217,6 +217,111 @@
                         </tr>
                     </tbody>
                    </table>
+                </div> -->
+                <div class="quontation-table">
+                  <div class="que-head d-none d-md-flex">
+                    <h4>報價日期</h4>
+                    <h4>網上報價編號</h4>
+                    <h4>服務名稱</h4>
+                    <h4>服務日期範圍</h4>
+                    <h4>服務狀態</h4>
+                    <h4>報價金額</h4>
+                    <h4></h4>
+                  </div>
+                  <div class="que-body">
+                    <!-- <div class="que-tr que-gray">
+                      <div><h3>報價日期</h3><h4>2024/02/28</h4></div>
+                      <div><h3>網上報價編號</h3><h4>S0A123331</h4></div>
+                      <div><h3></h3><h4>S0A123331</h4></div>
+                      <div><h3>服務狀態</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4></div>
+                      <div><h3></h3><h4>2024/01/01 - 2024/08/31</h4></div>
+                      <h4><button class="state-td btn orange-btn">已確認報價</button></h4>
+                      <h4>$5000.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div> -->
+                    <div class="que-tr que-light">
+                      <h4>2023/12/20</h4>
+                      <h4>S0A123435</h4>
+                      <h4>SUEP Reading Package 23/24(100 books )</h4>
+                      <h4>2023/09/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$3450.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                    <div class="que-tr que-gray">
+                      <h4>2023/11/21</h4>
+                      <h4>S0A123331</h4>
+                      <h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4>
+                      <h4>2023/09/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$2500.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                    <div class="que-tr que-light">
+                      <h4>2023/10/10</h4>
+                      <h4>S0A056434</h4>
+                      <h4>DSE Online Question Bank - School Subscription</h4>
+                      <h4>2023/09/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$3950.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                    <div class="que-tr que-gray">
+                      <h4>2024/02/28</h4>
+                      <h4>S0A123331</h4>
+                      <h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4>
+                      <h4>2024/01/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$5000.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                    <div class="que-tr que-light">
+                      <h4>2023/12/20</h4>
+                      <h4>S0A123435</h4>
+                      <h4>SUEP Reading Package 23/24(100 books )</h4>
+                      <h4>2023/09/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$3450.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                    <div class="que-tr que-gray">
+                      <h4>2023/11/21</h4>
+                      <h4>S0A123331</h4>
+                      <h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4>
+                      <h4>2023/09/01 - 2024/08/31</h4>
+                      <h4><button class="state-td btn puprple-btn">開始報價</button></h4>
+                      <h4>$2500.00</h4>
+                      <h4> <div class="action-td">
+                        <img src="assets/images/upload.png" alt="">
+                        <img src="assets/images/dowonload.png" alt="">
+                        <img src="assets/images/erro.png" alt="">
+                    </div></h4>
+                    </div>
+                  </div>
                 </div>
                 <div class="table-pagination">
                  <ul>
