--- a/quotation.html
+++ b/quotation.html
@@ -288,12 +288,12 @@
                     </div>
                     <div class="table-pagination">
                      <ul>
-                         <li class="active">1</li>
-                         <li>2</li>
-                         <li>3</li>
-                         <li>4</li>
-                         <li>5</li>
-                         <li>...</li>
+                         <li><a href="#" class="active">1</a></li>
+                         <li><a href="#">2</a></li>
+                         <li><a href="#">3</a></li>
+                         <li><a href="#">4</a></li>
+                         <li><a href="#">5</a></li>
+                         <li><a href="#">...</a></li>
                      </ul>
                     </div>
                   </div>
