--- a/profile_edit.html
+++ b/profile_edit.html
@@ -113,7 +113,7 @@
                     <li><a href="broadcast_message.html">信息中心</a></li>
                     <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
                     <li><a href="quotation.html">報價紀錄</a></li>
-                    <li><a href="#">活動報名紀錄</a></li>
+                    <li><a href="event_registration.html">活動報名紀錄</a></li>
                     <li><a href="profile_edit.html" class="active">個人資料</a></li>
                 </ul>
             </div>
