--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <li><a href="broadcast_message.html">信息中心</a></li>
                     <li><a href="index.html" class="active no-space" >Go eLearning</a></li>
                     <li><a href="quotation.html">報價紀錄</a></li>
-                    <li><a href="#">活動報名紀錄</a></li>
+                    <li><a href="event_registration.html">活動報名紀錄</a></li>
                     <li><a href="profile_edit.html">個人資料</a></li>
                 </ul>
             </div>
