--- a/quotation.html
+++ b/quotation.html
@@ -113,7 +113,7 @@
                     <li><a href="broadcast_message.html"  >信息中心</a></li>
                     <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
                     <li><a href="quotation.html" class="active">報價紀錄</a></li>
-                    <li><a href="#">活動報名紀錄</a></li>
+                    <li><a href="event_registration.html">活動報名紀錄</a></li>
                     <li><a href="profile_edit.html">個人資料</a></li>
                 </ul>
             </div>
@@ -136,11 +136,11 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex">
+                      <div class="que-head d-none d-md-flex green-bg">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
-                        <div><h4>服務名稱</h4></div>
-                        <div><h4>服務日期範圍</h4></div>
+                        <div class="exception-tab"><h4>服務名稱</h4></div>
+                        <div ><h4>服務日期範圍</h4></div>
                         <div><h4>服務狀態</h4></div>
                         <div><h4>報價金額</h4></div>
                         <div><h4></h4></div>
@@ -149,7 +149,7 @@
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/02/28</h4></div>
                           <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123331</h4></div>
-                          <div class="que-gray-flex"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4></div>
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">已確認報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
@@ -168,7 +168,7 @@
                         <div class="que-tr que-light">
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/12/20</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A123435</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                            <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
@@ -187,7 +187,7 @@
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/11/21</h4></div>
                           <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123331</h4></div>
-                          <div class="que-gray-flex"><h3>服務名稱</h3><h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4></div>
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
@@ -207,7 +207,7 @@
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/10/10</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A056434</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>DSE Online Question Bank - School Subscription</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>DSE Online Question Bank - School Subscription</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>$3950.00</h4></div>
@@ -227,7 +227,7 @@
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/02/28</h4></div>
                           <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123331</h4></div>
-                          <div class="que-gray-flex"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(250 eBooks)</h4></div>
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
@@ -247,7 +247,7 @@
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/12/20</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A123435</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
@@ -267,7 +267,7 @@
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/11/21</h4></div>
                           <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123331</h4></div>
-                          <div class="que-gray-flex"><h3>服務名稱</h3><h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>EdCity Reading Package 23/24 (Top Ten Special Edition) - Primary School</h4></div>
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
@@ -299,7 +299,7 @@
                   </div>
                   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex">
+                      <div class="que-head d-none d-md-flex green-bg">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
                         <div><h4>服務名稱</h4></div>
@@ -312,7 +312,7 @@
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/02/18</h4></div>
                           <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A12091</h4></div>
-                          <div class="que-gray-flex"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(150 eBooks)</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>Young Scientist - STEM Reading Package 23/24 (Half-Year Services)(150 eBooks)</h4></div>
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3050.00</h4></div>                    
@@ -329,7 +329,7 @@
                         <div class="que-tr que-light">
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/01/06</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A11990</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                            <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
