--- a/event_registration.html
+++ b/event_registration.html
@@ -151,8 +151,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/05/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>沙田沙角邨香港教育城</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>     
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/03/12</h4></div>
@@ -160,8 +161,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/06/28</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>        
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -169,8 +171,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -178,8 +181,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>           
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -187,8 +191,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>         
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -196,8 +201,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -205,21 +211,22 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>       
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
+                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
                         </div>
                       </div>
                     </div>
                     <div class="table-pagination">
-                     <ul>
-                         <li class="active">1</li>
-                         <li>2</li>
-                         <li>3</li>
-                         <li>4</li>
-                         <li>5</li>
-                         <li>...</li>
-                     </ul>
-                    </div>
+                      <ul>
+                          <li><a href="#" class="active">1</a></li>
+                          <li><a href="#">2</a></li>
+                          <li><a href="#">3</a></li>
+                          <li><a href="#">4</a></li>
+                          <li><a href="#">5</a></li>
+                          <li><a href="#">...</a></li>
+                      </ul>
+                     </div>
                   </div>
                   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                                       
