--- a/event_registration.html
+++ b/event_registration.html
@@ -155,7 +155,7 @@
                           <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
                           <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>     
                         </div>
-                        <div class="que-tr que-gray">
+                        <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/03/12</h4></div>
                           <div class="que-gray-flex exception-tab"><h3>活動報名名稱</h3><h4>「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</h4></div>
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/06/28</h4></div>
@@ -175,7 +175,7 @@
                           <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
                           <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
                         </div>
-                        <div class="que-tr que-gray">
+                        <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
                           <div class="que-gray-flex exception-tab"><h3>活動報名名稱</h3><h4>第一屆智醒消費學堂</h4></div>
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
@@ -195,7 +195,7 @@
                           <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
                           <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>         
                         </div>
-                        <div class="que-tr que-gray">
+                        <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
                           <div class="que-gray-flex exception-tab"><h3>活動報名名稱</h3><h4>學生獎勵計劃2023/24</h4></div>
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
