changes sidebar width

--- a/broadcast_message_detail.html
+++ b/broadcast_message_detail.html
@@ -150,7 +150,7 @@
     </div>
     </div>
    </section>
-  <footer>
+  <footer class="mb-0">
     <div class="container">
         <div class="footer-data">
             <h3 class="copy-right">版權所有© 2024 香港教育城有限公司</h3>
