--- a/quotation.html
+++ b/quotation.html
@@ -108,7 +108,7 @@
       <section class="main_data">
         <div class="container-fluid p-0">
           <div class="main-data_flex">
-            <div class="left-sidebar mt-4">
+            <div class="left-sidebar">
                 <ul class="left-sidelist">
                     <li><a href="broadcast_message.html"  >信息中心</a></li>
                     <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
