--- a/quotation.html
+++ b/quotation.html
@@ -153,12 +153,12 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">已確認報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
-                        </div></h4>
+                        </div></div>
                         <div  class="que-gray-flex d-sm-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -167,18 +167,18 @@
                         </div>
                         <div class="que-tr que-light">
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/12/20</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A123435</h4></div>
-                            <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
-                            <h4 class="d-none d-sm-block"> 
+                            <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123435</h4></div>
+                            <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                            <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
+                            <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
+                            <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
+                            <div class="d-none d-sm-block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/upload.png" alt="">
                               <img src="assets/images/dowonload.png" alt="">
                               <img src="assets/images/erro.png" alt="">
-                          </div></h4>
-                          <div  class="que-gray-flex d-sm-none action-mobile">
+                          </div></div>
+                          <div  class="que-gray-flex d-sm-none action-mobile ">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -191,13 +191,13 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
-                      </h4>
+                      </div>
                         <div  class="que-gray-flex d-sm-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -206,18 +206,18 @@
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/10/10</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A056434</h4></div>
-                          <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>DSE Online Question Bank - School Subscription</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>$3950.00</h4></div>
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A056434</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>DSE Online Question Bank - School Subscription</h4></div>
+                          <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
+                          <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
+                          <div class="que-gray-flex"><h3>報價金額</h3><h4>$3950.00</h4></div>
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
-                      </h4>
+                      </div>
                           <div  class="que-gray-flex d-sm-none action-mobile">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -231,13 +231,13 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
-                      </h4>
+                      </div>
                         <div  class="que-gray-flex d-sm-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -246,18 +246,18 @@
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/12/20</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A123435</h4></div>
-                          <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>2023/09/01 - 2024/08/31</h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
-                          <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A123435</h4></div>
+                          <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                          <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
+                          <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
+                          <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
-                      </h4>
+                      </div>
                           <div  class="que-gray-flex d-sm-none action-mobile">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -271,13 +271,13 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
-                      </h4>
+                      </div>
                         <div  class="que-gray-flex d-sm-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
@@ -316,11 +316,11 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3050.00</h4></div>                    
-                          <h4 class="d-none d-sm-block"> 
+                          <div class="d-none d-sm-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
-                        </div></h4>
+                        </div></div>
                         <div  class="que-gray-flex d-sm-none action-mobile">
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -328,16 +328,16 @@
                         </div>
                         <div class="que-tr que-light">
                             <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/01/06</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>S0A11990</h4></div>
-                            <div class="que-gray-flex exception-tab"><h3>報價日期</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>2024/01/01 - 2024/08/31</h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
-                            <div class="que-gray-flex"><h3>報價日期</h3><h4>$3450.00</h4></div>
-                            <h4 class="d-none d-sm-block"> 
+                            <div class="que-gray-flex"><h3>網上報價編號</h3><h4>S0A11990</h4></div>
+                            <div class="que-gray-flex exception-tab"><h3>服務名稱</h3><h4>SUEP Reading Package 23/24(100 books )</h4></div>
+                            <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
+                            <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
+                            <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
+                            <div class="d-none d-sm-block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/dowonload.png" alt="">
                               <img src="assets/images/erro.png" alt="">
-                          </div></h4>
+                          </div></div>
                           <div  class="que-gray-flex d-sm-none action-mobile">
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
