--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -367,22 +367,22 @@
            <h4>教城閱讀組合 23/24</h4>
            <div class="list">
             <ul class="popup-list">
-              <li>報價確認</li>
-              <li><img src="assets/images/Rectangle 188.png" alt=""></li>
-              <li>2024/15/10  10:12:00 </li>
-              <li>由陳潔兒確認報價</li>
+              <li class="order-2 order-md-1">報價確認</li>
+              <li class="order-1 order-md-2"><img src="assets/images/Rectangle 188.png" alt=""></li>
+              <li class="order-3">2024/15/10  10:12:00 </li>
+              <li class="order-4">由陳潔兒確認報價</li>
              </ul>
              <ul class="popup-list">
-              <li>報價中</li>
-              <li><img src="assets/images/Rectangle 188.png" alt=""></li>
-              <li>2024/12/10  1:04:00  </li>
-              <li>由張小明提交的報價內容</li>
+              <li class="order-2 order-md-1">報價中</li>
+              <li  class="order-1 order-md-2"><img src="assets/images/Rectangle 188.png" alt=""></li>
+              <li class="order-3">2024/12/10  1:04:00  </li>
+              <li class="order-4">由張小明提交的報價內容</li>
              </ul>
              <ul class="popup-list">
-              <li>收到服務要求</li>
-              <li><img src="assets/images/Group 1.png" alt=""></li>
-              <li>2024/10/10  4:04:00 </li>
-              <li>由陳潔兒提交的報價要求</li>
+              <li class="order-2 order-md-1">收到服務要求</li>
+              <li  class="order-1 order-md-2"><img src="assets/images/Group 1.png" alt=""></li>
+              <li class="order-3">2024/10/10  4:04:00 </li>
+              <li class="order-4">由陳潔兒提交的報價要求</li>
              </ul>
            </div>
                </div>
