--- a/registration_recorde_QR.html
+++ b/registration_recorde_QR.html
@@ -133,11 +133,11 @@
         <div class="record-list mb-34">
           <h3 class="record-title">活動資料</h3>
           <ul>
-            <li><h3>名稱</h3><h4>【研討會】教師持續專業發展系列︰推廣閱讀文化</h4>  </li>
-            <li><h3>日期</h3><h4 class="no-space">2024年5月9日（星期四）</h4>  </li>
-            <li><h3>時間</h3><h4 class="no-space">10:00 - 13:00</h4>  </li>
-            <li><h3>地址</h3><h4 class="no-space">沙田沙角邨香港教育城2樓201-202室</h4>  </li>
-            <li><h3>費用</h3><h4 class="no-space">免費</h4>  </li>
+            <li><h3 class="excep-h3">名稱</h3><h4 class="no-space">【研討會】教師持續專業發展系列︰推廣閱讀文化</h4>  </li>
+            <li><h3 class="excep-h3">日期</h3><h4 class="no-space">2024年5月9日（星期四）</h4>  </li>
+            <li><h3 class="excep-h3">時間</h3><h4 class="no-space">10:00 - 13:00</h4>  </li>
+            <li><h3 class="excep-h3">地址</h3><h4 class="no-space">沙田沙角邨香港教育城2樓201-202室</h4>  </li>
+            <li><h3 class="excep-h3">費用</h3><h4 class="no-space">免費</h4>  </li>
           </ul>
         </div>
         <div class="record-list mb-71">
