--- a/registration_recorde_online.html
+++ b/registration_recorde_online.html
@@ -108,7 +108,7 @@
        <section class="record-qr">
 <div class="container p-0">
   <div class="detail-title">
-      <h2>【研討會】教師持續專業發展系列︰推廣閱讀文化</h2>
+      <h2>「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</h2>
     </div>
     <div class="detail-back">
       <a href="event_registration.html">
