--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -50,7 +50,7 @@
               <img src="assets/images/image 1.png" class="logo-img" alt="" />
             </div>
             <div class="main-tab-box d-none d-sm-flex">
-                  <a href="#" class="main-left-data">
+                  <a href="event_register_list" class="main-left-data">
                     <img src="assets/images/main1.png" alt="" />
                     <div class="main-border">
                       <h3>活動概覽</h3>
